objects/CameleonCPQ__QxQuoteLine__c.object
<CustomObject>
    <description>PROS Smart CPQx Quote Line</description>
    <fields>
        <fullName>Accept_Alt_Prod__c</fullName>
        <label>Accept Alternate?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Rebate_Total_Spend__c</fullName>
        <label>Actual Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Applied_Percentage__c</fullName>
        <label>Alt Applied Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Alt_BSD_Catalog_Assortment__c</fullName>
        <label>Alt BSD Catalog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Current_Price__c</fullName>
        <label>Alternative Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Expert__c</fullName>
        <label>Alternative Expert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Final_Proposed__c</fullName>
        <label>Alternative Final Proposed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Floor__c</fullName>
        <label>Alternative Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Green__c</fullName>
        <label>Alt Green</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_HUB__c</fullName>
        <label>Alt HUB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_IGM_Perc__c</fullName>
        <label>Alt IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Alt_IGM__c</fullName>
        <label>Alt IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_IMU_Perc__c</fullName>
        <label>Alt IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Alt_IMU__c</fullName>
        <label>Alt IMU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_In_Cart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alt in Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alt_List_Price__c</fullName>
        <label>Alt List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Margin_Gain_Loss__c</fullName>
        <label>Alt IGM Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Net_Cost__c</fullName>
        <label>Alt Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Price_Origin_Id__c</fullName>
        <label>Alt Price Origin Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Private_Label__c</fullName>
        <label>Alt Private Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Prod_Descr__c</fullName>
        <label>Alt Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Prod__c</fullName>
        <label>Alternative Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Proposed_Pricing_Method__c</fullName>
        <label>Alt Proposed Pricing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Proposed__c</fullName>
        <label>Alternative Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Score__c</fullName>
        <label>Alt Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alt_TDC__c</fullName>
        <label>Alt TDC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Target__c</fullName>
        <label>Alternative Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Total_Savings__c</fullName>
        <label>Alternative Total Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Web_Price__c</fullName>
        <label>Alt Web</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Yield_Reference__c</fullName>
        <label>Alt Yield Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Yield__c</fullName>
        <label>Alt Yield</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Percentage__c</fullName>
        <label>Applied Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <label>Approval Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BSD_Catalog_Assortment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSD Catalog Assortment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Floor__c</fullName>
        <formula>IF( Sync_Proposed__c &lt; Floor__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Below Floor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Net_Cost__c</fullName>
        <formula>IF(Sync_Proposed__c &lt; Net_Cost__c, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Below Net Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPT_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPT Agreement</label>
        <referenceTo>PROS_Agreement__c</referenceTo>
        <relationshipLabel>CPTs</relationshipLabel>
        <relationshipName>PROS_Quote_CPT_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Discount__c</fullName>
        <description>Discount</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__DisplaySequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ExternalLineId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Quote Line External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ItemName__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__LineTemplateId__c</fullName>
        <label>Line Template Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__LineTemplateType__c</fullName>
        <label>Line Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRODUCT</fullName>
                </value>
                <value>
                    <fullName>SPECIFIC</fullName>
                </value>
                <value>
                    <fullName>FOLDER</fullName>
                </value>
                <value>
                    <fullName>PACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ParentLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Line</label>
        <referenceTo>CameleonCPQ__QxQuoteLine__c</referenceTo>
        <relationshipLabel>PROS Quote Lines</relationshipLabel>
        <relationshipName>PROS_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Price__c</fullName>
        <description>Price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteId__c</fullName>
        <label>Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>PROS Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Total__c</fullName>
        <description>Total</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Addition__c</fullName>
        <label>Change Addition</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Decreases__c</fullName>
        <label>Change Decreases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Deletion__c</fullName>
        <label>Change Deletion</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Increases__c</fullName>
        <label>Change Increases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Combined_Qty__c</fullName>
        <label>Combined Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Addition_Communication_req__c</fullName>
        <label>Addition communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notification only</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <default>true</default>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_Additional_Disco_act__c</fullName>
        <label>Additional DISCO action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Replace with OD alternate (when possible)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_Alternate_Restrictions__c</fullName>
        <label>Alternate restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Equal or lesser price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_CC_Price_Change_Reqd__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price Change Notice (in days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_CPI_Price_Increase_Cap_App_Scope__c</fullName>
        <label>Price Increase Cap Application Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_CPI_Price_Increase_Cap_Period__c</fullName>
        <label>Price Increase Cap Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_CPI_Price_Increase_Cap_Type__c</fullName>
        <label>Price Increase Cap Type/Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_CPI_Price_Increase_Pegged_To__c</fullName>
        <label>CPI Price increase are pegged to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Cap_Level__c</fullName>
        <label>Cap application level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Cap_Perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Percentage</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comp_Cap_Type__c</fullName>
        <label>Cap Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Static Amount</fullName>
                </value>
                <value>
                    <fullName>Consumer Price Index (CPI)</fullName>
                </value>
                <value>
                    <fullName>Producer Price Index (PPI)</fullName>
                </value>
                <value>
                    <fullName>Web price</fullName>
                </value>
                <value>
                    <fullName>Operating cost</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_Consum_Price_Index_Level__c</fullName>
        <label>Consumer price index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Consum_Price_Index_Local_Area__c</fullName>
        <label>Consumer price local area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Consum_Price_Index_Region__c</fullName>
        <label>Consumer Price region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_DISCO_Communication_req__c</fullName>
        <label>DISCO communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_Decrease_Communication_req__c</fullName>
        <label>Decrease communication requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Deletion_Communication_req__c</fullName>
        <label>Deletion communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notification only</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <default>true</default>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_Department_Group__c</fullName>
        <label>Department Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Department__c</fullName>
        <label>Department</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comp_Effective_date_of_this_language__c</fullName>
        <label>Effective date of this language</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comp_Freq_Price_Increases__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How frequently can we pass increases? (in days)</description>
        <inlineHelpText>How frequently can we pass increases? (in days)</inlineHelpText>
        <label>Increase Frequency (in days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Id__c</fullName>
        <label>CPT Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Initial_Freeze_Period__c</fullName>
        <label>Price Lock</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Is_Comm_Reqd__c</fullName>
        <label>Communication Req&apos;d for Price Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notification only</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <default>true</default>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_Is_Lang_Stated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there language stating that applicabl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Is_Price_Increase_Cap_App_Level__c</fullName>
        <label>Price increase Cap App Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Is_Price_Increase_Cap_App_Scope__c</fullName>
        <label>Price increase Cap App Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Is_Price_Increase_Capped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are price increases capped?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Name__c</fullName>
        <label>CPT Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_PPII_Index_Structure__c</fullName>
        <label>Detail of PPI index structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Private_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Prod_Dep__c</fullName>
        <label>Product Dept.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Producer_Price_Index_Structure__c</fullName>
        <label>Consumer Price index structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Req_Timing_CC_Updates__c</fullName>
        <label>Required Timing of CC Updates</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Type__c</fullName>
        <label>Compliance Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Value__c</fullName>
        <label>Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Vendor_Letter_Req__c</fullName>
        <label>Vendor letter required for core increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Upon request</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <default>true</default>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison_Price__c</fullName>
        <label>Comparison Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compliance_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>CPTs</relationshipLabel>
        <relationshipName>CPTs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Violation_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Violation Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>Compliance Violations</relationshipLabel>
        <relationshipName>Compliance_Violation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Ineligible__c</fullName>
        <label>Core Ineligible</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Reference__c</fullName>
        <label>Cross Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Extended_Sales__c</fullName>
        <label>Current Extended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Price_Origin_Id__c</fullName>
        <label>Current Pricing Origin Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Price_Origin_Type__c</fullName>
        <label>Current Price Origin Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Proposed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed Price is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Comm__c</fullName>
        <label>Customer Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Violation_Count__c</fullName>
        <label>Violation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Allowed_Change__c</fullName>
        <label>Days Allowed Change</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Pricing_Method__c</fullName>
        <label>Default Pricing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deviate_IGM_Perc__c</fullName>
        <label>Deviate IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deviate_IMU_Perc__c</fullName>
        <label>Deviated IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deviated_Cost__c</fullName>
        <label>Deviated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deviated_Deal_Nb__c</fullName>
        <label>Deal Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deviated_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deviated_Extended_Rebate_Value__c</fullName>
        <label>Extended Deviation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deviated_IGM__c</fullName>
        <label>Deviated IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deviated_IMU__c</fullName>
        <label>Deviated IMU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deviated_Item_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deviated Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deviated_Model_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deviation Not Yet Being Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deviated_Price__c</fullName>
        <label>Deviated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deviated_Rebate_Applied_Perc__c</fullName>
        <label>Deviated Rebate Applied %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deviated_Rebate_Value__c</fullName>
        <label>Deviated Rebate Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deviated_TDC__c</fullName>
        <label>Deviated TDC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_Additions__c</fullName>
        <label>Additions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Below_Floor_Count__c</fullName>
        <label>Count of Items Below Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Core_Perc__c</fullName>
        <label>Core Perc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ES_Deletions__c</fullName>
        <label>Deletions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Ext_Net__c</fullName>
        <label>Ext Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_Ext_Sell__c</fullName>
        <label>Ext Sell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES_IGM__c</fullName>
        <label>IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ES_Price_Cap__c</fullName>
        <label>Price Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ES_Price_Decreases__c</fullName>
        <label>Price Decreases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Price_Increases__c</fullName>
        <label>Price Increases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Price_Lock_Days__c</fullName>
        <label>Price Lock Delays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Quote can’t be moved forward with workflow (Submit/Approve/Published).</description>
        <label>Error Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Summary Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>Executive Summary</relationshipLabel>
        <relationshipName>ExecutiveSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exhibit_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exhibit Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expert__c</fullName>
        <label>Expert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Deviated_Net_Cost__c</fullName>
        <label>Extended Deviated Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Deviated_Price__c</fullName>
        <label>Extended Deviated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Deviated_TDC__c</fullName>
        <label>Extended Deviated TDC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Green__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Green</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_Quantity__c</fullName>
        <label>Historical Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGM_Perc__c</fullName>
        <label>IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IGM__c</fullName>
        <label>IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMU_Perc__c</fullName>
        <label>IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IMU__c</fullName>
        <label>IMU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>